smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/control/control-with-invalid-key2.smithy
// Parse error at line 2, column 5 near `.b`: Expected: ':', but found '.'
$foo.bar: "1.0"
